# lirmm-sand

./: .gitattributes  .gitignore  README.md  bazar.ttt  claw_open.ttt  lirmm_sand_ae.ipynb  lirmm_sand_poke_full.ipynb  lirmm_sand_tap_full.ipynb  sandhandv1.ttt
rkcl_package/rkcl-sand-manipulation/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  license.txt
rkcl_package/rkcl-sand-manipulation/apps/: CMakeLists.txt
rkcl_package/rkcl-sand-manipulation/apps/sand_manipulation_app/: main.cpp  sand_manipulation_app.cmake
rkcl_package/rkcl-sand-manipulation/apps/sand_manipulation_simu_app/: main.cpp  sand_manipulation_simu_app.cmake
rkcl_package/rkcl-sand-manipulation/apps/simple_simu_app/: main.cpp  simple_simu_app.cmake
rkcl_package/rkcl-sand-manipulation/apps/workspace_calibration/: main.cpp  workspace_calibration.cmake
rkcl_package/rkcl-sand-manipulation/share/cmake/: rkcl-sand-manipulation_PID_Version.cmake
rkcl_package/rkcl-sand-manipulation/share/resources/app_config/: sand_manipulation_init_config.yaml  sand_manipulation_simu_init_config.yaml  simple_simu_init_config.yaml  workspace_calibration_data.yaml  workspace_calibration_init_config.yaml  workspace_calibration_simu_data.yaml
rkcl_package/rkcl-sand-manipulation/share/resources/app_config/sand_manipulation_config/: grasp.yaml  home.yaml  poke.yaml  tap.yaml
rkcl_package/rkcl-sand-manipulation/share/resources/app_log/simple_simu_log/: .gitignore
rkcl_package/rkcl-sand-manipulation/share/resources/app_model/: bazar_shadow.yaml  bazar_shadow_left.yaml  bazar_shadow_right.yaml
rkcl_package/rkcl-sand-manipulation/share/resources/vrep_scene/: finalv4.ttt
(+608 files in other folders)
